# references

drm-kms/: Cargo.toml
drm-kms/src/: main.rs
new-drm-monitor-to-lua-callback/: Cargo.toml  config.lua
new-drm-monitor-to-lua-callback/src/: main.rs
udev/: Cargo.toml
udev/src/: main.rs
